# parameterize_jobs

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_rtd.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-publish.yaml  pythonpackage.yaml  release-pypi.yaml
docs/: .gitignore  conf.py
parameterize_jobs/: __init__.py  parameterize_jobs.py
src/parameterize_jobs/: __init__.py  parameterize_jobs.py
tests/: test_parameterize_jobs.py
